--- a/crowd-voice-front-end-project/src/client/app/dashboard/user/userProfile.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/user/userProfile.component.html
@@ -31,11 +31,12 @@
 
 	<!-- /.row -->
 	<div class="col-lg-12 card card-block" *ngIf="user">
-		<div class="col-lg-9">
-			<img [src]="user.AvatarImage" alt="AvatarImage" style="width:250px;height:250px;">
+		<div class="col-lg-12">
+			<img [src]="user.AvatarImage" alt="AvatarImage" style="max-width: 500px; max-height: 500px; display: block; margin-left: auto; margin-right: auto;">
+			<br/>
 			<h3>{{user.Name}}</h3>
-			<p>Registered on: {{user.CreatedDateTime | amDateFormat:'LL'}}</p>
-			<p>{{user.ShortBio}}</p>
+			<p><i class="fa fa-registered"></i> Registered on: {{user.CreatedDateTime | amDateFormat:'LL'}}</p>
+			<p><i class="fa fa-comment-o"></i> {{user.ShortBio}}</p>
 		</div>
 	</div>
 
