--- a/crowd-voice-front-end-project/src/client/app/login/login.component.html
+++ b/crowd-voice-front-end-project/src/client/app/login/login.component.html
@@ -31,7 +31,7 @@
 					
 				</div>
 				
-				<button *ngIf="!loading"  class="btn btn-primary" type="submit" [disabled]= "!loginUserForm.form.valid">Login</button>
+				<button *ngIf="!loading"  class="btn btn-primary" type="submit" [disabled]= "!loginUserForm.form.valid"><i class="fa fa-sign-in"></i> Login</button>
 				<span *ngIf="loading">
 					<i class="fa fa-spinner fa-pulse fa-2x fa-fw"></i>
 					<span class="sr-only">Loading...</span>
@@ -39,7 +39,11 @@
 				
 				<br/><br/><br/>
 				
-				<a type="submit" class="btn rounded-btn" routerLink="/signup"> Not a user? Go to register page </a>
+				<a class="btn rounded-btn" routerLink="/signup"><i class="fa fa-user-plus"></i> Not a user? Go to register page </a>
+				
+				<br/><br/><br/>
+				
+				<a routerLink="/dashboard/home"><i class="fa fa-sign-in"></i> Continue as Guest </a>
 			</form>
 		
 		</div>	
