--- a/crowd-voice-front-end-project/src/client/app/signup/signup.component.html
+++ b/crowd-voice-front-end-project/src/client/app/signup/signup.component.html
@@ -52,7 +52,7 @@
 					
 				</div>
 				
-				<button *ngIf="!loading" class="btn btn-primary" type="submit" [disabled]= "!registerUserForm.form.valid">Register</button>
+				<button *ngIf="!loading" class="btn btn-primary" type="submit" [disabled]= "!registerUserForm.form.valid"><i class="fa fa-user-plus"></i> Register</button>
 				<span *ngIf="loading">
 					<i class="fa fa-spinner fa-pulse fa-2x fa-fw"></i>
 					<span class="sr-only">Loading...</span>
@@ -60,7 +60,7 @@
 				
 				<br/><br/><br/>
 				
-				<a type="submit" class="btn rounded-btn" routerLink="/login"> Go to login page </a>
+				<a type="submit" class="btn rounded-btn" routerLink="/login"><i class="fa fa-sign-in"></i> Go to login page </a>
 			
 			</form>
 			
