Small refactor to projects list view

--- a/crowd-voice-front-end-project/src/client/app/dashboard/project/projectList.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/project/projectList.component.html
@@ -40,3 +40,8 @@
 	</div>
 	<hr/>
 </div>
+<span *ngIf="projects && projects.length == 0">
+	<div class="alert alert-info">
+		I am sorry. No projects for you here.
+	</div>
+</span>
