--- a/crowd-voice-front-end-project/src/client/app/dashboard/project/projectProfile.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/project/projectProfile.component.html
@@ -70,7 +70,7 @@
 		</div>
 	</div>
 	
-	<button href="https://twitter.com/share">Tweet</button>
+	<a href="https://twitter.com/share">Tweet</a>
 	
 	<iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fgithub.com%2F&layout=button_count&size=large&mobile_iframe=true&width=1000&height=1000&appId" 
 	width="100" height="30" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
