--- a/crowd-voice-front-end-project/src/client/app/dashboard/project/projectProfile.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/project/projectProfile.component.html
@@ -36,6 +36,20 @@
 		<hr/>
     </div>
 	
+	<div class="row">
+		<div class="col-lg-12">
+			<i class="fa fa-twitter"></i> 
+			<a (click)="createExternalShare('TWI')" target="blank" href="https://twitter.com/share">
+				Share to Twitter
+			</a>
+			&nbsp;|&nbsp;
+			<i class="fa fa-facebook"></i> 
+			<a (click)="createExternalShare('FAC')" href="javascript:void(0)">
+				Share to Facebook
+			</a>
+		</div>
+	</div>
+	<br/>
     <!-- /.row -->
 	<div class="col-lg-12 card card-block" *ngIf="project">
 		<h3>{{project.Title}}</h3>
@@ -70,11 +84,6 @@
 		</div>
 	</div>
 	
-	<a href="https://twitter.com/share">Tweet</a>
-	
-	<iframe src="https://www.facebook.com/plugins/share_button.php?href=https%3A%2F%2Fgithub.com%2F&layout=button_count&size=large&mobile_iframe=true&width=1000&height=1000&appId" 
-	width="100" height="30" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
-
 	<div class="row" *ngIf="(projectUpdates && projectUpdates.length > 0) || (fundingPackages && fundingPackages.length > 0)">
 		<div class="col-lg-12">
 			<div class="card card-block" (click)="$event.preventDefault()">
