refactored all frontend views to wait for data to come from server before rendering the view - started viva wallet integration

--- a/crowd-voice-front-end-project/src/client/app/dashboard/home/home.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div *ngIf="slides && projectsToNotify" class="container-fluid">
     <h2 class="text-muted">Trending <small>Projects</small></h2>
     <div class="row">
         <div class="col-md-12">
