--- a/crowd-voice-front-end-project/src/client/app/dashboard/project/projectSearch.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/project/projectSearch.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div *ngIf="projectCategoryOptions" class="container-fluid">
 	<!-- Page Heading -->
     <div class="row">
         <div class="col-lg-12">
@@ -15,7 +15,6 @@
             </ol>
         </div>
     </div>
-    
     
     <div class="row">
 		<div class="col-lg-12">
