--- a/crowd-voice-front-end-project/src/client/app/dashboard/project/fundingPackageEdit.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/project/fundingPackageEdit.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div *ngIf="fundingPackageFromServer" class="container-fluid">
     <!-- Page Heading -->
     <div class="row">
         <div class="col-lg-12">
