--- a/crowd-voice-front-end-project/src/client/app/dashboard/project/projectStatScreen.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/project/projectStatScreen.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div *ngIf="projectStatFromServer" class="container-fluid">
 	<!-- Page Heading -->
     <div class="row">
         <div class="col-lg-12">
@@ -48,6 +48,7 @@
 				</table>
 			</div>
 		</div>
+		<hr/>
 		<div class="card card-block">
 			<h5 class="page-header">
 				<span *ngIf="fundingPeriodHasPassed">
@@ -73,5 +74,6 @@
                 [MoneyPledged / FundingGoal]: {{projectStatFromServer.MoneyPledged}} <i class="fa fa-euro"></i> / {{projectStatFromServer.FundingGoal}} <i class="fa fa-euro"></i>
             </h5>
 		</div>
+		<a href="javascript:void(0)" [routerLink]="['/dashboard/projects/view', projectStatFromServer.ProjectId]">Back to Project Profile Page</a>
 	</div>
 </div>
