--- a/crowd-voice-front-end-project/src/client/app/dashboard/user/userProfile.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/user/userProfile.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div *ngIf="user" class="container-fluid">
 	<div class="row">
 		<div class="col-lg-12">
 			<h2 class="page-header">
