--- a/crowd-voice-front-end-project/src/client/app/dashboard/project/fundingPackagePay.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/project/fundingPackagePay.component.html
@@ -1,1 +1,33 @@
-<h1>Payment Page</h1>
+<div *ngIf="fundingPackage" class="container-fluid">
+	<div *ngIf="title" class="row">
+		<div class="col-lg-12">
+			<h2 class="page-header">
+				{{title}}
+			</h2>
+			<ol class="breadcrumb">
+				<li>
+					<i class="fa fa-dashboard"></i>  <a href="Javascript:void(0)" routerLink="/dashboard/home">Home</a>
+				</li>
+				<li class="active">
+					<i class="fa fa-profile"></i> {{title}}
+				</li>
+			</ol>
+		</div>
+	</div>
+	<div *ngIf="fundingPackage">
+		<div class="col-lg-12 jumbotron card card-block">
+			<strong><u>You chose to fund project with</u></strong>
+			<br/>
+			<strong>Project Title: {{fundingPackage.ProjectTitle}}</strong>
+			<br/>
+			<strong>Project Description: {{fundingPackage.ProjectDescription}}</strong>
+			<hr/>
+			<strong>Funding Package Chosen: {{fundingPackage.Title}}</strong>
+			<br/>
+			<strong *ngIf="!isDonationPackage">Funding Package Reward: {{fundingPackage.ProjectDescription}}</strong>
+			
+		</div>
+	</div>
+	<hr/>
+	<a href="javascript:void(0)" [routerLink]="['/dashboard/projects/view', fundingPackage.ProjectId]">Back to Project Profile Page</a>
+</div>
