--- a/crowd-voice-front-end-project/src/client/app/dashboard/project/fundingPackagePay.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/project/fundingPackagePay.component.html
@@ -44,10 +44,33 @@
 			
 			<span *ngIf="isDonationPackage && donationAmount">
 				You are going to pay {{donationAmount}} <i class="fa fa-euro"></i>
+				<br/><br/>
+				<form id="myform" action="/checkout" method="post">
+					<button 
+						type="button"
+						data-vp-publickey="ez9tdzoqqoWdLz/3nWXiUXgoq+Wrc3cpblqwBTXg43E="
+						data-vp-baseurl="https://demo.vivapayments.com"
+						data-vp-lang="el"
+						data-vp-amount="1000"
+						data-vp-description="A CrowdVoice Project Funding">
+					</button>
+				</form>
+				
 			</span>
 			
 			<span *ngIf="!isDonationPackage">
 				You are going to pay {{fundingPackage.PledgeAmount}} <i class="fa fa-euro"></i>
+				<br/><br/>
+				<form id="myform" action="/checkout" method="post">
+					<button 
+						type="button"
+						data-vp-publickey="ez9tdzoqqoWdLz/3nWXiUXgoq+Wrc3cpblqwBTXg43E="
+						data-vp-baseurl="https://demo.vivapayments.com"
+						data-vp-lang="el"
+						data-vp-amount="1000"
+						data-vp-description="A CrowdVoice Project Funding">
+					</button>
+				</form>
 			</span>
 			
 		</div>
