just added a card in the home page for easy access

--- a/crowd-voice-front-end-project/src/client/app/dashboard/home/home.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/home/home.component.html
@@ -59,6 +59,27 @@
                 </div>
             </div>
         </div>
+        <div class="col-xl-6 col-lg-6">
+            <div class="card card-success card-inverse">
+                <div class="card-header card-success">
+                    <div class="row">
+                        <div class="col-xs-3">
+                            <i class="fa fa-tasks fa-5x"></i>
+                        </div>
+                        <div class="col-xs-9 text-xs-right">
+                            <div>Search Users</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-footer card-green">
+                    <a class="text-success" [routerLink]="['/dashboard/users/search']">
+                        <span class="pull-xs-left">Go!</span>
+                        <span class="pull-xs-right"><i class="fa fa-arrow-circle-right"></i></span>
+                        <div class="clearfix"></div>
+                    </a>
+                </div>
+            </div>
+        </div>
         <div *ngIf="currentUser" class="col-xl-6 col-lg-6">
             <div class="card card-warning card-inverse">
                 <div class="card-header card-warning">
