--- a/crowd-voice-front-end-project/src/client/app/dashboard/project/fundingPackagePay.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/project/fundingPackagePay.component.html
@@ -35,9 +35,11 @@
 				<label for="amountbox">Amount to donate in <i class="fa fa-euro"></i> (*)</label>
 			
 				<input 
-					type="text" class="form-control input-underline input-lg" 
+					(keypress)="_keyPress($event)"
+					type="text"
+					class="form-control input-underline input-lg" 
 					name="amountbox" id="amountbox" placeholder="Enter Amount to donate..."
-					#amountbox type="text" [(ngModel)]="donationAmount" required>
+					#amountbox [(ngModel)]="donationAmount" required>
 				
 			</fieldset>
 			<hr/>
@@ -45,32 +47,54 @@
 			<span *ngIf="isDonationPackage && donationAmount">
 				You are going to pay {{donationAmount}} <i class="fa fa-euro"></i>
 				<br/><br/>
+				
+				<a href="javascript: void(0);" (click)="initVivaButton(true)">Click me if this is OK to proceed to payment options!</a>
+				<br/><br/>
+				<span id="viva-wallet-button"></span>
+				
+				<!--
+				<form id="myform" action="/checkout" method="post">
+					<button id="viva-button" type="button" (click)="openViva(true)" class="btn btn-success">Pay with Viva Wallet</button>
+				</form>
+				
 				<form id="myform" action="/checkout" method="post">
 					<button 
 						type="button"
 						data-vp-publickey="ez9tdzoqqoWdLz/3nWXiUXgoq+Wrc3cpblqwBTXg43E="
 						data-vp-baseurl="https://demo.vivapayments.com"
 						data-vp-lang="el"
-						data-vp-amount="1000"
+						data-vp-amount="100"
 						data-vp-description="A CrowdVoice Project Funding">
 					</button>
 				</form>
+				-->
 				
 			</span>
 			
 			<span *ngIf="!isDonationPackage">
 				You are going to pay {{fundingPackage.PledgeAmount}} <i class="fa fa-euro"></i>
 				<br/><br/>
+				
+				<a href="javascript: void(0);" (click)="initVivaButton(false)">Click me if this is OK to proceed to payment options!</a>
+				<br/><br/>
+				<span id="viva-wallet-button"></span>
+				
+				<!--
+				<form id="myform" action="/checkout" method="post">
+					<button id="viva-button" type="button" (click)="openViva(false)" class="btn btn-success">Pay with Viva Wallet</button>
+				</form>
+				
 				<form id="myform" action="/checkout" method="post">
 					<button 
 						type="button"
 						data-vp-publickey="ez9tdzoqqoWdLz/3nWXiUXgoq+Wrc3cpblqwBTXg43E="
 						data-vp-baseurl="https://demo.vivapayments.com"
 						data-vp-lang="el"
-						data-vp-amount="1000"
+						data-vp-amount="100"
 						data-vp-description="A CrowdVoice Project Funding">
 					</button>
-				</form>
+				</form>-->
+				
 			</span>
 			
 		</div>
