Minor fixes to stats screen and project profile view

--- a/crowd-voice-front-end-project/src/client/app/dashboard/project/projectProfile.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/project/projectProfile.component.html
@@ -79,7 +79,7 @@
 			<strong *ngIf="projectStat" class="col-lg-3 project-stats">
 				<p>Money Pledged (in <i class="fa fa-euro"></i>): {{projectStat.MoneyPledged}} / {{project.FundingGoal}}</p> 
 				<p>{{(projectStat.MoneyPledged / project.FundingGoal) * 100}}% complete</p>
-				<p>Backed by {{projectStat.BackersNo}} people</p>
+				<p>Backed {{projectStat.BackersNo}} time(s).</p>
 			</strong>	
 		</div>
 	</div>
