--- a/crowd-voice-front-end-project/src/client/app/dashboard/project/projectStatScreen.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/project/projectStatScreen.component.html
@@ -27,7 +27,7 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td>Number of Backers</td>
+							<td>Number of Backings</td>
 							<td>{{projectStatFromServer.BackersNo}}</td>
 						</tr>
 						<!--
