--- a/crowd-voice-front-end-project/src/client/app/dashboard/home/home.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/home/home.component.html
@@ -16,6 +16,17 @@
         </div>
     </div>
     <hr>
+    <div class="row" *ngIf="currentUser && projectsToNotify && projectsToNotify.length > 0">
+        <div class="col-lg-12">
+            <div class="card card-default">
+                <div class="card-header">
+                    <i class="fa fa-bell fa-fw"></i> My Completed Backed Projects
+                </div>
+                <notifications-cmp [projects]="projectsToNotify"></notifications-cmp>
+            </div>
+        </div>
+    </div>
+    <hr/>
     <div class="row">
         <div class="col-xl-6 col-lg-6">
             <div class="card card-primary card-inverse">
@@ -120,17 +131,6 @@
                         <div class="clearfix"></div>
                     </a>
                 </div>
-            </div>
-        </div>
-    </div>
-    <hr/>
-    <div class="row" *ngIf="currentUser">
-        <div class="col-lg-12">
-            <div class="card card-default">
-                <div class="card-header">
-                    <i class="fa fa-bell fa-fw"></i> My Completed Backed Projects
-                </div>
-                <notifications-cmp [projects]="projectsToNotify"></notifications-cmp>
             </div>
         </div>
     </div>
