Fixed FB typing error in Typescript - App ready for Azure deployment

--- a/crowd-voice-front-end-project/src/client/app/dashboard/chat/chatPage.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/chat/chatPage.component.html
@@ -17,7 +17,7 @@
 	
 	<div class="row">
 		<div class="col-lg-12">
-			<ul>
+			<ul class="jumbotron">
 				<li *ngFor="let chatMessage of allMessages" style="list-style: none;">
 					{{chatMessage.Sent | date:"dd.MM.y" }}: {{chatMessage.Message}}
 				</li>
