--- a/crowd-voice-front-end-project/src/client/app/dashboard/chat/chatPage.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/chat/chatPage.component.html
@@ -19,8 +19,9 @@
 		<div class="col-lg-12">
 			<ul class="jumbotron">
 				<li *ngFor="let chatMessage of allMessages" style="list-style: none;">
-					{{chatMessage.Sent | date:"dd.MM.y" }}: {{chatMessage.Message}}
+					{{chatMessage.Sent | date:"dd.MM.y" }} <a [routerLink]="['/dashboard/users/view', chatMessage.FromId]">{{chatMessage.FromName}}</a>: {{chatMessage.Message}}
 				</li>
+				<hr/>
 			</ul>
 		</div>
 	</div>
@@ -29,14 +30,12 @@
 	
 	<div class="row">
 		<div class="col-lg-12">
-			<form name="form" (ngSubmit)="sendMessage()" role="form" #sendChatMessageForm="ngForm" novalidate>
-				<div class="form-group">
-					<label for="message">Message</label>
-					<input type="text" class="form-control" id="message" placeholder="Message" [(ngModel)]="currentMessage.Message"
-						name="message"  placeholder="Enter your message...">
-				</div>
-				<button type="submit" class="btn btn-default" [disabled]="!canSendMessage">Send</button>
-			</form>
+			<div class="form-group">
+				<label for="message">Message</label>
+				<input type="text" class="form-control" id="message" placeholder="Message"
+					#currentMessage name="message" placeholder="Enter your message...">
+			</div>
+			<button (click)="sendMessage(currentMessage.value)" class="btn btn-default" [disabled]="!canSendMessage">Send</button>
 		</div>
 	</div>
 </div>
