--- a/crowd-voice-front-end-project/src/client/app/dashboard/home/home.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/home/home.component.html
@@ -28,20 +28,21 @@
     </div>
     <hr/>
     <div class="row">
-        <div class="col-xl-6 col-lg-6">
+        <!--///////////////////////-->
+        <div *ngIf="currentUser" class="col-xl-6 col-lg-6">
             <div class="card card-primary card-inverse">
                 <div class="card-header card-primary">
                     <div class="row">
                         <div class="col-xs-3">
-                            <i class="fa fa-comments fa-5x"></i>
+                            <i class="fa fa-tasks fa-5x"></i>
                         </div>
                         <div class="col-xs-9 text-xs-right">
-                            <div>All Projects</div>
+                            <div>My Projects</div>
                         </div>
                     </div>
                 </div>
                 <div class="card-footer card-default">
-                    <a [routerLink]="['/dashboard/projects/all']">
+                    <a [routerLink]="['/dashboard/users/myProjects/', currentUser.Id]">
                         <span class="pull-xs-left">Go!</span>
                         <span class="pull-xs-right"><i class="fa fa-arrow-circle-right"></i></span>
                         <div class="clearfix"></div>
@@ -49,20 +50,21 @@
                 </div>
             </div>
         </div>
-        <div class="col-xl-6 col-lg-6">
-            <div class="card card-success card-inverse">
-                <div class="card-header card-success">
+        <!--///////////////////////////-->
+        <div *ngIf="currentUser" class="col-xl-6 col-lg-6">
+            <div class="card card-primary card-inverse">
+                <div class="card-header card-primary">
                     <div class="row">
                         <div class="col-xs-3">
                             <i class="fa fa-tasks fa-5x"></i>
                         </div>
                         <div class="col-xs-9 text-xs-right">
-                            <div>Search Projects</div>
+                            <div>Create New Project</div>
                         </div>
                     </div>
                 </div>
-                <div class="card-footer card-green">
-                    <a class="text-success" [routerLink]="['/dashboard/projects/search']">
+                <div class="card-footer card-default">
+                    <a [routerLink]="['/dashboard/projects/create']">
                         <span class="pull-xs-left">Go!</span>
                         <span class="pull-xs-right"><i class="fa fa-arrow-circle-right"></i></span>
                         <div class="clearfix"></div>
@@ -70,69 +72,8 @@
                 </div>
             </div>
         </div>
-        <div class="col-xl-6 col-lg-6">
-            <div class="card card-success card-inverse">
-                <div class="card-header card-success">
-                    <div class="row">
-                        <div class="col-xs-3">
-                            <i class="fa fa-tasks fa-5x"></i>
-                        </div>
-                        <div class="col-xs-9 text-xs-right">
-                            <div>Search Users</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card-footer card-green">
-                    <a class="text-success" [routerLink]="['/dashboard/users/search']">
-                        <span class="pull-xs-left">Go!</span>
-                        <span class="pull-xs-right"><i class="fa fa-arrow-circle-right"></i></span>
-                        <div class="clearfix"></div>
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div *ngIf="currentUser" class="col-xl-6 col-lg-6">
-            <div class="card card-warning card-inverse">
-                <div class="card-header card-warning">
-                    <div class="row">
-                        <div class="col-xs-3">
-                            <i class="fa fa-shopping-cart fa-5x"></i>
-                        </div>
-                        <div class="col-xs-9 text-xs-right">
-                            <div>My Backed Projects</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card-footer card-yellow">
-                    <a class="text-warning" [routerLink]="['/dashboard/users/view', currentUser.Id]">
-                        <span class="pull-xs-left">Go!</span>
-                        <span class="pull-xs-right"><i class="fa fa-arrow-circle-right"></i></span>
-                        <div class="clearfix"></div>
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div *ngIf="currentUser" class="col-xl-6 col-lg-6">
-            <div class="card card-danger card-inverse">
-                <div class="card-header card-danger">
-                    <div class="row">
-                        <div class="col-xs-3">
-                            <i class="fa fa-support fa-5x"></i>
-                        </div>
-                        <div class="col-xs-9 text-xs-right">
-                            <div>Create Project</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="card-footer card-red">
-                    <a class="text-danger" [routerLink]="['/dashboard/projects/create']">
-                        <span class="pull-xs-left">Go!</span>
-                        <span class="pull-xs-right"><i class="fa fa-arrow-circle-right"></i></span>
-                        <div class="clearfix"></div>
-                    </a>
-                </div>
-            </div>
-        </div>
+        <!--///////////////////////////-->
+        
     </div>
     <hr/>
 
