--- a/crowd-voice-front-end-project/src/client/app/dashboard/home/home.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/home/home.component.html
@@ -13,6 +13,7 @@
                 <i class="fa fa-chevron-left left carousel-control"></i>
                 <i class="fa fa-chevron-right right carousel-control"></i>
             </carousel>
+
         </div>
     </div>
     <hr>
@@ -25,8 +26,10 @@
                 <notifications-cmp [projects]="projectsToNotify"></notifications-cmp>
             </div>
         </div>
+        <hr/>
+        <br>
     </div>
-    <hr/>
+
     <div class="row">
         <!--///////////////////////-->
         <div *ngIf="currentUser" class="col-xl-6 col-lg-6">
@@ -73,16 +76,26 @@
             </div>
         </div>
         <!--///////////////////////////-->
-        
+
     </div>
     <hr/>
-
-    <div class="col-lg-12">
-        <span class="col-lg-7">
-                <timeline-cmp></timeline-cmp>
+    <div *ngIf="currentUser">
+        <div class="col-lg-12">
+            <span class="col-lg-7">
+                <updatesTimeline-cmp></updatesTimeline-cmp>
             </span>
-        <span class="col-lg-5">
+            <span class="col-lg-5">
                 <chat-cmp></chat-cmp>
             </span>
+        </div>
+    </div>
+    <!--///////////////////////////-->
+    <div *ngIf="!currentUser">
+        <div class="col-lg-12">
+            <span class="col-lg-7">
+                        <lastUsersTimeline-cmp></lastUsersTimeline-cmp>
+            </span>
+
+        </div>
     </div>
 </div>
