--- a/crowd-voice-front-end-project/src/client/app/dashboard/user/userCreatedProjects.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/user/userCreatedProjects.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="createdProjects" class="container-fluid">
-    <div *ngIf="title" class="row">
+    <div class="row">
         <div class="col-lg-12">
             <h2 class="page-header">
                 My Projects
