--- a/crowd-voice-front-end-project/src/client/app/dashboard/chat/chatPage.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/chat/chatPage.component.html
@@ -18,10 +18,11 @@
 	<div class="row">
 		<div class="col-lg-12">
 			<ul class="jumbotron">
-				<li *ngFor="let chatMessage of allMessages" style="list-style: none;">
-					{{chatMessage.Sent | date:"dd.MM.y" }} <a [routerLink]="['/dashboard/users/view', chatMessage.FromId]">{{chatMessage.FromName}}</a>: {{chatMessage.Message}}
+				<li *ngFor="let chatMessage of allMessages; let i = index" 
+					[ngClass]="{'light-red-color': chatMessage.FromId == currentUser.Id, 'light-green-color': chatMessage.FromId != currentUser.Id}"
+					style="list-style: none;">
+					<i class="fa fa-comment"></i> On {{chatMessage.Sent | date:'medium' }} | <a [routerLink]="['/dashboard/users/view', chatMessage.FromId]">{{chatMessage.FromName}}</a> wrote:<br/><strong>{{chatMessage.Message}}</strong>
 				</li>
-				<hr/>
 			</ul>
 		</div>
 	</div>
@@ -32,10 +33,10 @@
 		<div class="col-lg-12">
 			<div class="form-group">
 				<label for="message">Message</label>
-				<input type="text" class="form-control" id="message" placeholder="Message"
-					#currentMessage name="message" placeholder="Enter your message...">
+				<input type="text" class="form-control" id="messageToSend"
+					#messageToSendToClients name="messageToSend" placeholder="Enter your message...">
 			</div>
-			<button (click)="sendMessage(currentMessage.value)" class="btn btn-default" [disabled]="!canSendMessage">Send</button>
+			<button (click)="sendMessage(messageToSendToClients.value)" class="btn btn-default" [disabled]="!canSendMessage">Send</button>
 		</div>
 	</div>
 </div>
