--- a/crowd-voice-front-end-project/src/client/assets/sass/_app-base.scss
+++ b/crowd-voice-front-end-project/src/client/assets/sass/_app-base.scss
@@ -459,3 +459,22 @@ a:hover{
 .jumbotron {
     border: 1px solid lightblue;
 }
+
+.light-red-color {
+    background: white none repeat scroll 0 0;
+    border: 1px solid;
+    border-radius: 20px;
+    color: black;
+    padding: 15px;
+    margin: 5px;
+}
+
+.light-green-color {
+    color: lightseagreen;
+    background: lightyellow none repeat scroll 0 0;
+    padding: 15px;
+    margin: 5px;
+    border: 1px solid;
+    border-radius: 20px;
+    text-align: right;
+}
