chat is ready :D

--- a/crowd-voice-front-end-project/src/client/app/dashboard/home/home.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/home/home.component.html
@@ -76,6 +76,28 @@
             </div>
         </div>
         <!--///////////////////////////-->
+        <div *ngIf="currentUser" class="col-xl-6 col-lg-6">
+            <div class="card card-primary card-inverse">
+                <div class="card-header card-primary">
+                    <div class="row">
+                        <div class="col-xs-3">
+                            <i class="fa fa-tasks fa-5x"></i>
+                        </div>
+                        <div class="col-xs-9 text-xs-right">
+                            <div>Chat</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card-footer card-default">
+                    <a [routerLink]="['/dashboard/chat']">
+                        <span class="pull-xs-left">Go!</span>
+                        <span class="pull-xs-right"><i class="fa fa-arrow-circle-right"></i></span>
+                        <div class="clearfix"></div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <!--///////////////////////////-->
 
     </div>
     <hr/>
