--- a/crowd-voice-front-end-project/src/client/app/dashboard/chat/chatPage.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/chat/chatPage.component.html
@@ -25,6 +25,15 @@
 				</li>
 			</ul>
 		</div>
+		<!--<div class="col-lg-4">
+			<ul class="jumbotron">
+				<li *ngFor="let chatUser of allChatUsers; let i = index" 
+					[ngClass]="{'light-red-color': chatUser.UserId == currentUser.Id, 'light-green-color': chatUser.UserId != currentUser.Id}"
+					style="list-style: none;">
+					<i class="fa fa-user"></i> <a [routerLink]="['/dashboard/users/view', chatUser.UserId]">{{chatUser.UserName}}</a>
+				</li>
+			</ul>
+		</div>-->
 	</div>
 	
 	<div *ngIf="typingMessageToShow" class="row">
