--- a/crowd-voice-front-end-project/src/client/app/dashboard/chat/chatPage.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/chat/chatPage.component.html
@@ -48,7 +48,7 @@
 		<div class="col-lg-12">
 			<div class="form-group">
 				<label for="message">Message</label>
-				<input (keyup)="typeMessage($event)" type="text" class="form-control" id="messageToSend"
+				<input (keyup)="typeMessage($event)" (blur)="onLoseFocus()" type="text" class="form-control" id="messageToSend"
 					#messageToSendToClients name="messageToSend" placeholder="Enter your message...">
 			</div>
 			<button (click)="sendMessage(messageToSendToClients.value)" class="btn btn-default" [disabled]="!canSendMessage">Send</button>
