Added chat to sidebar for logged in users only - removed from homepage

--- a/crowd-voice-front-end-project/src/client/app/dashboard/home/home.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/home/home.component.html
@@ -76,7 +76,7 @@
             </div>
         </div>
         <!--///////////////////////////-->
-        <div *ngIf="currentUser" class="col-xl-6 col-lg-6">
+        <!--<div *ngIf="currentUser" class="col-xl-6 col-lg-6">
             <div class="card card-primary card-inverse">
                 <div class="card-header card-primary">
                     <div class="row">
@@ -96,7 +96,7 @@
                     </a>
                 </div>
             </div>
-        </div>
+        </div>-->
         <!--///////////////////////////-->
 
     </div>
