Payment fix redirect and some other minor problems

--- a/crowd-voice-front-end-project/src/client/app/dashboard/project/fundingPackagePay.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/project/fundingPackagePay.component.html
@@ -48,7 +48,7 @@
 				You are going to pay {{donationAmount}} <i class="fa fa-euro"></i>
 				<br/><br/>
 				
-				<a href="javascript: void(0);" (click)="initVivaButton(true)">Click me if this is OK to proceed to payment options!</a>
+				<a class="initVivaButtonHref" href="javascript: void(0);" (click)="initVivaButton(true)">Click me if this is OK to proceed to payment options!</a>
 				<br/><br/>
 				<span id="viva-wallet-button"></span>
 				
@@ -58,7 +58,7 @@
 				You are going to pay {{fundingPackage.PledgeAmount}} <i class="fa fa-euro"></i>
 				<br/><br/>
 				
-				<a href="javascript: void(0);" (click)="initVivaButton(false)">Click me if this is OK to proceed to payment options!</a>
+				<a class="initVivaButtonHref" href="javascript: void(0);" (click)="initVivaButton(false)">Click me if this is OK to proceed to payment options!</a>
 				<br/><br/>
 				<span id="viva-wallet-button"></span>
 				
