--- a/crowd-voice-front-end-project/src/client/app/dashboard/chat/chatPage.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/chat/chatPage.component.html
@@ -25,15 +25,6 @@
 				</li>
 			</ul>
 		</div>
-		<!--<div class="col-lg-4">
-			<ul class="jumbotron">
-				<li *ngFor="let chatUser of allChatUsers; let i = index" 
-					[ngClass]="{'light-red-color': chatUser.UserId == currentUser.Id, 'light-green-color': chatUser.UserId != currentUser.Id}"
-					style="list-style: none;">
-					<i class="fa fa-user"></i> <a [routerLink]="['/dashboard/users/view', chatUser.UserId]">{{chatUser.UserName}}</a>
-				</li>
-			</ul>
-		</div>-->
 	</div>
 	
 	<div *ngIf="typingMessageToShow" class="row">
@@ -44,7 +35,7 @@
 	
 	<br/>
 	
-	<div class="row">
+	<div *ngIf="!loading" class="row">
 		<div class="col-lg-12">
 			<div class="form-group">
 				<label for="message">Message</label>
@@ -54,4 +45,7 @@
 			<button (click)="sendMessage(messageToSendToClients.value)" class="btn btn-default" [disabled]="!canSendMessage">Send</button>
 		</div>
 	</div>
+	<span *ngIf="loading">
+		<i class="fa fa-spinner fa-pulse fa-2x fa-fw"></i> Connecting to Chat Server...
+	</span>
 </div>
