--- a/crowd-voice-front-end-project/src/client/app/dashboard/project/fundingPackageEdit.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/project/fundingPackageEdit.component.html
@@ -59,13 +59,9 @@
 				<button *ngIf="!loading" class="btn btn-secondary" (click)="deleteFundingPackage()">Delete Funding Package</button>
                 
                 <span *ngIf="loading">
-					<i class="fa fa-spinner fa-pulse fa-2x fa-fw"></i>
-					<span class="sr-only">Loading...</span>
+					<i class="fa fa-spinner fa-pulse fa-2x fa-fw"></i> Please wait...
 				</span>
                 
-                <!--
-                    <button type="reset" class="btn btn-secondary" (click)="form.reset();">Reset</button>
-                -->
             </form>
 
         </div>
