--- a/crowd-voice-front-end-project/src/client/app/dashboard/project/projectCommentCreate.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/project/projectCommentCreate.component.html
@@ -35,13 +35,9 @@
 				
                 <button *ngIf="!loading" class="btn btn-primary" type="submit" [disabled]= "!createProjectCommentForm.form.valid">Post Project Comment</button>
 				<span *ngIf="loading">
-					<i class="fa fa-spinner fa-pulse fa-2x fa-fw"></i>
-					<span class="sr-only">Loading...</span>
+					<i class="fa fa-spinner fa-pulse fa-2x fa-fw"></i>  Creating Comment...
 				</span>
                 
-                <!--
-                    <button type="reset" class="btn btn-secondary" (click)="form.reset();">Reset</button>
-                -->
             </form>
 
         </div>
