--- a/crowd-voice-front-end-project/src/client/app/dashboard/project/projectCreate.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/project/projectCreate.component.html
@@ -90,14 +90,9 @@
 
                 <button *ngIf="!loading" class="btn btn-primary" type="submit" [disabled]= "!createProjectForm.form.valid">Create Project</button>
 				<span *ngIf="loading">
-					<i class="fa fa-spinner fa-pulse fa-2x fa-fw"></i>
-					<span class="sr-only">Loading...</span>
+					<i class="fa fa-spinner fa-pulse fa-2x fa-fw"></i> Creating Project...
 				</span>
                 
-                <!--
-                    <button type="reset" class="btn btn-secondary" (click)="form.reset();">Reset</button>
-                -->
-
             </form>
 
         </div>
