--- a/crowd-voice-front-end-project/src/client/app/dashboard/project/projectEdit.component.html
+++ b/crowd-voice-front-end-project/src/client/app/dashboard/project/projectEdit.component.html
@@ -60,13 +60,9 @@
 				
                 <button *ngIf="!loading" class="btn btn-primary" type="submit" [disabled]= "!editProjectForm.form.valid">Edit Project</button>
 				<span *ngIf="loading">
-					<i class="fa fa-spinner fa-pulse fa-2x fa-fw"></i>
-					<span class="sr-only">Loading...</span>
+					<i class="fa fa-spinner fa-pulse fa-2x fa-fw"></i> Saving your changes...
 				</span>
                 
-                <!--
-                    <button type="reset" class="btn btn-secondary" (click)="form.reset();">Reset</button>
-                -->
             </form>
 
         </div>
