--- a/crowd-voice-front-end-project/src/client/app/login/login.component.html
+++ b/crowd-voice-front-end-project/src/client/app/login/login.component.html
@@ -33,8 +33,7 @@
 				
 				<button *ngIf="!loading"  class="btn btn-primary" type="submit" [disabled]= "!loginUserForm.form.valid"><i class="fa fa-sign-in"></i> Login</button>
 				<span *ngIf="loading">
-					<i class="fa fa-spinner fa-pulse fa-2x fa-fw"></i>
-					<span class="sr-only">Loading...</span>
+					<i class="fa fa-spinner fa-pulse fa-2x fa-fw"></i> Signing you in...
 				</span>
 				
 				<br/><br/><br/>
