--- a/crowd-voice-front-end-project/src/client/app/signup/signup.component.html
+++ b/crowd-voice-front-end-project/src/client/app/signup/signup.component.html
@@ -54,8 +54,7 @@
 				
 				<button *ngIf="!loading" class="btn btn-primary" type="submit" [disabled]= "!registerUserForm.form.valid"><i class="fa fa-user-plus"></i> Register</button>
 				<span *ngIf="loading">
-					<i class="fa fa-spinner fa-pulse fa-2x fa-fw"></i>
-					<span class="sr-only">Loading...</span>
+					<i class="fa fa-spinner fa-pulse fa-2x fa-fw"></i> Registering you to CrowdVoice...
 				</span>
 				
 				<br/><br/><br/>
